--- a/loja-de-veiculos/css/main.css
+++ b/loja-de-veiculos/css/main.css
@@ -175,3 +175,137 @@
   .form input:invalid:not(:placeholder-shown) {
     border-color: var(--color-error);
   }
+
+  /* delete */
+
+
+  .delete {
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background: red;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+    background: #e62222;
+}
+
+.delete,
+.delete span {
+    transition: 200ms;
+}
+
+.delete .text {
+    transform: translateX(25px);
+    color: white;
+    font-weight: bold;
+    margin-left: -20px;
+}
+
+.delete .icon {
+    position: absolute;
+    border-left: 1px solid #c41b1b;
+    transform: translateX(70px);
+    height: 20px;
+    width: 30px;
+    margin-left: -10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.delete img {
+    width: 10px;
+    fill: #eee;
+}
+
+.delete:hover {
+    background: #ff3636;
+}
+
+.delete:hover .text {
+    color: transparent;
+}
+
+.delete:hover .icon {
+    width: 100px;
+    border-left: none;
+    transform: translateX(0);
+}
+
+.delete:focus {
+    outline: none;
+}
+
+.delete:active .icon img {
+    transform: scale(0.8);
+}
+
+/* alterar */
+
+
+.alterar {
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background: 1ba2c4;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+  background: #1ba2c4;
+}
+
+.alterar,
+.alterar span {
+  transition: 200ms;
+}
+
+.alterar .text {
+  transform: translateX(25px);
+  color: white;
+  font-weight: bold;
+  margin-left: -20px;
+}
+
+.alterar .icon {
+  position: absolute;
+  border-left: 1px solid #ffffff;
+  transform: translateX(70px);
+  height: 20px;
+  width: 30px;
+  margin-left: -7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.alterar img {
+  width: 10px;
+  fill: #eee;
+}
+
+.alterar:hover {
+  background: #1ba2c4;
+}
+
+.alterar:hover .text {
+  color: transparent;
+}
+
+.alterar:hover .icon {
+  width: 100px;
+  border-left: none;
+  transform: translateX(0);
+}
+
+.alterar:focus {
+  outline: none;
+}
+
+.alterar:active .icon img {
+  transform: scale(0.8);
+}
