--- a/loja-de-veiculos/css/main.css
+++ b/loja-de-veiculos/css/main.css
@@ -309,3 +309,70 @@
 .alterar:active .icon img {
   transform: scale(0.8);
 }
+
+/* ATIVAR */
+
+
+.ativar {
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background: 1ba2c4;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+  background: #07d303;
+}
+
+.ativar,
+.ativar span {
+  transition: 200ms;
+}
+
+.ativar .text {
+  transform: translateX(25px);
+  color: white;
+  font-weight: bold;
+  margin-left: -20px;
+}
+
+.ativar .icon {
+  position: absolute;
+  border-left: 1px solid #ffffff;
+  transform: translateX(70px);
+  height: 20px;
+  width: 30px;
+  margin-left: -7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ativar img {
+  width: 10px;
+  fill: #eee;
+}
+
+.ativar:hover {
+  background: #07d303;
+}
+
+.ativar:hover .text {
+  color: transparent;
+}
+
+.ativar:hover .icon {
+  width: 100px;
+  border-left: none;
+  transform: translateX(0);
+}
+
+.ativar:focus {
+  outline: none;
+}
+
+.ativar:active .icon img {
+  transform: scale(0.8);
+}
