--- a/loja-de-veiculos/css/main.css
+++ b/loja-de-veiculos/css/main.css
@@ -376,3 +376,71 @@
 .ativar:active .icon img {
   transform: scale(0.8);
 }
+
+/* COMPRA */
+
+
+.compra {
+  width: 110px;
+  height: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background: 1ba2c4;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+  background: #1ba2c4;
+}
+
+.compra,
+.compra span {
+  transition: 200ms;
+}
+
+.compra .text {
+  transform: translateX(15px);
+  color: white;
+  font-weight: bold;
+  margin-left: -15px;
+}
+
+.compra .icon {
+  position: absolute;
+  border-left: 1px solid #ffffff;
+  transform: translateX(80px);
+  height: 20px;
+  width: 30px;
+  margin-left: -7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.compra img {
+  width: 10px;
+  fill: #eee;
+}
+
+.compra:hover {
+  background: #1ba2c4;
+}
+
+.compra:hover .text {
+  color: transparent;
+}
+
+.compra:hover .icon {
+  width: 100px;
+  border-left: none;
+  transform: translateX(0);
+}
+
+.compra:focus {
+  outline: none;
+}
+
+.compra:active .icon img {
+  transform: scale(0.8);
+}
+
